...
    <string name="nav_progress">Progress</string>
    <string name="nav_settings">Settings</string>

    <!-- Workout -->
    <string name="start_workout">Start Workout</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add_set">Add Set</string>
    <string name="log_set">Log Set</string>
    <string name="previous">Previous</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="rpe">RPE</string>
...
